Sonar
Signed-off-by: Antoine LIMOUZIN <antoine.limouzin@rte-france.com>